2008-06-16  Ivan Frade  <ivan.frade@nokia.com>

	* configure.ac
	* tests/Makefile.am
	* tests/common/Makefile.am
	* tests/common/tracker-test-helpers.c
	* tests/common/tracker-test-helpers.h: New library with common
	code for all tests.
	
	* tests/libtracker-common/tracker-ontology-test.c
	* tests/libtracker-common/Makefile.am
	* tests/libtracker-common/tracker-type-utils-test.c: Added unit
	tests to tracker-type-utils.

	* src/libtracker-common/tracker-type-utils.c: Minor fixes to pass
	the tests.
	
2008-06-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* svn merge -r 1656:1683 ../xesam-support

2008-06-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-crawler.c: No more blocking of the mainloop

2008-06-13  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-dbus.c:
	Replaced g_warning with g_message. g_warning abort unit tests.
	
	* tests/libtracker-common/Makefile.am
	* tests/libtracker-common/non-utf8.txt
	* tests/libtracker-common/tracker-dbus-test.c: Unit tests to
	tracker-dbus helper methods, using non-utf8 strings.

2008-06-13  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-dbus.c:
	(tracker_dbus_slist_to_strv), (tracker_dbus_async_queue_to_strv):
	* src/libtracker-db/tracker-db-dbus.c:
	(tracker_dbus_query_result_to_strv),
	(tracker_dbus_query_result_to_hash_table),
	(tracker_dbus_query_result_to_ptr_array): Now we UTF-8 check ALL
	strings in these functions since they are sent over DBus and we
	don't want DBus calling _exit() for us if the string is invalid
	UTF-8. 

2008-06-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* tests/trackerd/tracker-xesam-test.c:
	* tests/trackerd/tracker-xesam-session-test.c:
	* tests/trackerd/tracker-xesam-hit-test.c:
	* tests/trackerd/tracker-xesam-hits-test.c:
	* tests/trackerd/tracker-xesam-test.h:

	Making the Xesam unit tests work

2008-06-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* tests/trackerd/tracker-xesam-test.c
	* tests/trackerd/tracker-xesam-hit-test.c